test setting up Node.js

--- a/Web.config
+++ b/Web.config
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.webServer>
+    <handlers>
+      <add name="iisnode" path="server.js" verb="*" modules="iisnode" />
+    </handlers>
+    <iisnode watchedFiles="web.config;*.js" />
     <webSocket enabled="false"/>
     <rewrite>
       <rules>
