--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "engines": {
     "node": ">=8.0.0"
   },
+  "scripts": {
+    "start": "node server.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/capnmidnight/seanmcbeth.com.git"
