--- a/web.config
+++ b/web.config
@@ -36,7 +36,8 @@
           <match url="^server.js\/debug[\/]?" />
         </rule>
 
-        <rule name="Force redirect to https">
+        <!-- Force redirect to https -->
+        <rule name="HTTPSRedirect">
           <match url="(.*)"/>
           <conditions>
             <add input="{HTTP_HOST}" pattern="(.+\.)?seanmcbeth\.com$" />
@@ -45,11 +46,6 @@
           </conditions>
           <action type="Redirect" url="https://{HTTP_HOST}/{R:1}"/>
         </rule>
-
-        <!-- First we consider whether the incoming URL matches a physical file in the /public folder -->
-        <!-- <rule name="StaticContent">
-          <action type="Rewrite" url="public{REQUEST_URI}"/>
-        </rule> -->
 
         <!-- All other URLs are mapped to the node.js site entry point -->
         <rule name="DynamicContent">
