--- a/Personal Site/package.json
+++ b/Personal Site/package.json
@@ -12,7 +12,7 @@
     "@juniper/tdd": "file:../Juniper/src/Juniper.TypeScript/testing",
     "@types/dom-mediacapture-record": "1.0.11",
     "@types/dom-types": "file:../Juniper/src/Juniper.TypeScript/dom-types",
-    "@types/extra-types": "file:../Juniper/src/Juniper.TypeScript/extra-types",
+    "@juniper-types/extra-types": "1.0.2",
     "@types/three": "0.140.0",
     "@types/web-bluetooth": "0.0.14",
     "@types/webxr": "0.4.0",
