--- a/BuildConfig/BuildConfig.csproj
+++ b/BuildConfig/BuildConfig.csproj
@@ -1,17 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<OutputType>Exe</OutputType>
+		<OutputType>Library</OutputType>
 		<TargetFramework>net6.0</TargetFramework>
 		<RootNamespace>SeanMcBeth</RootNamespace>
-		<AssemblyName>SeanMcBeth.Build</AssemblyName>
+		<AssemblyName>SeanMcBeth.BuildConfig</AssemblyName>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\BuildConfig\BuildConfig.csproj" />
-		<ProjectReference Include="..\Juniper\src\Juniper.Root\Juniper.Root.csproj" />
 		<ProjectReference Include="..\Juniper\src\Juniper.TSBuild\Juniper.TSBuild.csproj" />
 	</ItemGroup>
 
