--- a/Personal Site/package.json
+++ b/Personal Site/package.json
@@ -8,37 +8,37 @@
     "watch": "node --experimental-modules esbuild.config.js --watch"
   },
   "devDependencies": {
-    "@juniper/esbuild": "file:../Juniper/src/Juniper.TypeScript/esbuild",
-    "@juniper/tdd": "file:../Juniper/src/Juniper.TypeScript/testing",
+    "@juniper-lib/esbuild": "file:../Juniper/src/Juniper.TypeScript/esbuild",
+    "@juniper-lib/tdd": "file:../Juniper/src/Juniper.TypeScript/testing",
     "@types/dom-mediacapture-record": "1.0.11",
-    "@types/dom-types": "file:../Juniper/src/Juniper.TypeScript/dom-types",
-    "@juniper-types/extra-types": "1.0.2",
+    "@juniper-types/dom-types": "1.0.0",
+    "@juniper-types/extra-types": "1.1.0",
     "@types/three": "0.140.0",
     "@types/web-bluetooth": "0.0.14",
     "@types/webxr": "0.4.0",
     "@typescript/analyze-trace": "0.9.0",
-    "esbuild": "0.14.38",
+    "esbuild": "0.14.39",
     "esbuild-plugin-glsl": "1.1.0",
-    "typescript": "4.6.4"
+    "typescript": "4.7.2"
   },
   "dependencies": {
-    "@juniper/2d": "file:../Juniper/src/Juniper.TypeScript/graphics2d",
-    "@juniper/audio": "file:../Juniper/src/Juniper.TypeScript/audio",
-    "@juniper/ble": "file:../Juniper/src/Juniper.TypeScript/ble",
-    "@juniper/dom": "file:../Juniper/src/Juniper.TypeScript/dom",
-    "@juniper/emoji": "file:../Juniper/src/Juniper.TypeScript/emoji",
-    "@juniper/fetcher": "file:../Juniper/src/Juniper.TypeScript/fetcher",
-    "@juniper/fetcher-worker": "file:../Juniper/src/Juniper.TypeScript/fetcher-worker",
-    "@juniper/physics": "file:../Juniper/src/Juniper.TypeScript/physics",
-    "@juniper/physics-worker": "file:../Juniper/src/Juniper.TypeScript/physics-worker",
-    "@juniper/tests": "file:../Juniper/src/Juniper.TypeScript/tests",
-    "@juniper/threejs": "file:../Juniper/src/Juniper.TypeScript/threejs",
-    "@juniper/tslib": "file:../Juniper/src/Juniper.TypeScript/tslib",
-    "@juniper/webrtc": "file:../Juniper/src/Juniper.TypeScript/webrtc",
-    "@juniper/worker-client": "file:../Juniper/src/Juniper.TypeScript/worker-client",
-    "@juniper/worker-server": "file:../Juniper/src/Juniper.TypeScript/worker-server",
+    "@juniper-lib/2d": "file:../Juniper/src/Juniper.TypeScript/graphics2d",
+    "@juniper-lib/audio": "file:../Juniper/src/Juniper.TypeScript/audio",
+    "@juniper-lib/ble": "file:../Juniper/src/Juniper.TypeScript/ble",
+    "@juniper-lib/dom": "file:../Juniper/src/Juniper.TypeScript/dom",
+    "@juniper-lib/emoji": "file:../Juniper/src/Juniper.TypeScript/emoji",
+    "@juniper-lib/fetcher": "file:../Juniper/src/Juniper.TypeScript/fetcher",
+    "@juniper-lib/fetcher-worker": "file:../Juniper/src/Juniper.TypeScript/fetcher-worker",
+    "@juniper-lib/physics": "file:../Juniper/src/Juniper.TypeScript/physics",
+    "@juniper-lib/physics-worker": "file:../Juniper/src/Juniper.TypeScript/physics-worker",
+    "@juniper-lib/tests": "file:../Juniper/src/Juniper.TypeScript/tests",
+    "@juniper-lib/threejs": "file:../Juniper/src/Juniper.TypeScript/threejs",
+    "@juniper-lib/tslib": "1.0.1",
+    "@juniper-lib/webrtc": "file:../Juniper/src/Juniper.TypeScript/webrtc",
+    "@juniper-lib/worker-client": "file:../Juniper/src/Juniper.TypeScript/worker-client",
+    "@juniper-lib/worker-server": "file:../Juniper/src/Juniper.TypeScript/worker-server",
     "gl-matrix": "3.4.3",
-    "pdfjs-dist": "2.13.216",
+    "pdfjs-dist": "2.14.305",
     "three": "0.140.2"
   }
 }
