--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
 obj/
 bin/
 .vs/
-commands.txt
-cur/
-nbproject/private/
 node_modules/
-/presentations/immersive-design.pdf
-/presentations/immersive-design.pptx
-/Web.config
+*.csproj.user
