fix app settings

--- a/Personal Site/appsettings.json
+++ b/Personal Site/appsettings.json
@@ -1,10 +1,23 @@
 {
+  "LetsEncrypt": {
+    "FullChainPath": "/home/smcbeth/bin/SeanMcBeth.Site/certs/fullchain.pem",
+    "PrivateKeyPath": "/home/smcbeth/bin/SeanMcBeth.Site/certs/privkey.pem"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Warning",
+      "Microsoft": "Warning",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Version": "2.20.0"
+  "ContentTypes": {
+    ".glb": "model/gltf-binary",
+    ".gltf": "model/gltf-json",
+    ".vtt": "text/vtt"
+  },
+  "DefaultFiles": [
+    "index.html"
+  ],
+  "AllowedHosts": "*"
 }
