Juniper with NPM workspaces

--- a/Personal Site/package.json
+++ b/Personal Site/package.json
@@ -8,40 +8,37 @@
     "watch": "node --experimental-modules esbuild.config.js --watch"
   },
   "devDependencies": {
-    "@juniper-lib/esbuild": "file:../Juniper/src/Juniper.TypeScript/esbuild",
-    "@juniper-lib/tdd": "file:../Juniper/src/Juniper.TypeScript/testing",
-    "@juniper-types/dom-types": "1.1.0",
-    "@juniper-types/extra-types": "1.2.0",
+    "@juniper-lib/esbuild": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/esbuild",
+    "@juniper-lib/tdd": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/tdd",
+    "@juniper-types/dom-types": "file:../Juniper/src/Juniper.TypeScript/@juniper-types/dom-types",
+    "@juniper-types/extra-types": "file:../Juniper/src/Juniper.TypeScript/@juniper-types/extra-types",
     "@types/dom-mediacapture-record": "1.0.11",
     "@types/three": "0.141.0",
     "@types/web-bluetooth": "0.0.14",
     "@types/webxr": "0.4.0",
     "@typescript/analyze-trace": "0.9.0",
     "esbuild": "0.14.42",
-    "esbuild-plugin-glsl": "1.1.0",
-    "typescript": "4.7.2"
+    "esbuild-plugin-glsl": "1.1.0"
   },
   "dependencies": {
-    "@juniper-lib/2d": "file:../Juniper/src/Juniper.TypeScript/graphics2d",
-    "@juniper-lib/audio": "file:../Juniper/src/Juniper.TypeScript/audio",
-    "@juniper-lib/ble": "file:../Juniper/src/Juniper.TypeScript/ble",
-    "@juniper-lib/dom": "file:../Juniper/src/Juniper.TypeScript/dom",
-    "@juniper-lib/emoji": "file:../Juniper/src/Juniper.TypeScript/emoji",
-    "@juniper-lib/fetcher": "file:../Juniper/src/Juniper.TypeScript/fetcher",
-    "@juniper-lib/fetcher-worker": "file:../Juniper/src/Juniper.TypeScript/fetcher-worker",
-    "@juniper-lib/mediatypes": "file:../Juniper/src/Juniper.TypeScript/mediatypes",
-    "@juniper-lib/physics": "file:../Juniper/src/Juniper.TypeScript/physics",
-    "@juniper-lib/physics-worker": "file:../Juniper/src/Juniper.TypeScript/physics-worker",
-    "@juniper-lib/tests": "file:../Juniper/src/Juniper.TypeScript/tests",
-    "@juniper-lib/threejs": "file:../Juniper/src/Juniper.TypeScript/threejs",
-    "@juniper-lib/tslib": "1.2.0",
-    "@juniper-lib/webrtc": "file:../Juniper/src/Juniper.TypeScript/webrtc",
-    "@juniper-lib/worker-client": "file:../Juniper/src/Juniper.TypeScript/worker-client",
-    "@juniper-lib/worker-server": "file:../Juniper/src/Juniper.TypeScript/worker-server",
-    "@juniper-types/indexdb": "file:../Juniper/src/Juniper.TypeScript/indexdb-types",
+    "@juniper-lib/graphics2d": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/graphics2d",
+    "@juniper-lib/audio": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/audio",
+    "@juniper-lib/dom": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/dom",
+    "@juniper-lib/emoji": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/emoji",
+    "@juniper-lib/fetcher": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/fetcher",
+    "@juniper-lib/fetcher-worker": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/fetcher-worker",
+    "@juniper-lib/mediatypes": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/mediatypes",
+    "@juniper-lib/tests": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/tests",
+    "@juniper-lib/threejs": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/threejs",
+    "@juniper-lib/tslib": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/tslib",
+    "@juniper-lib/webrtc": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/webrtc",
+    "@juniper-lib/worker-client": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/worker-client",
+    "@juniper-lib/worker-server": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/worker-server",
+    "@juniper-types/indexdb": "file:../Juniper/src/Juniper.TypeScript/@juniper-types/indexdb",
     "@types/offscreencanvas": "2019.7.0",
     "gl-matrix": "3.4.3",
     "pdfjs-dist": "2.14.305",
-    "three": "0.141.0"
+    "three": "0.141.0",
+    "typescript": "4.7.2"
   }
 }
