--- a/Personal Site/package.json
+++ b/Personal Site/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "build": "node --experimental-modules esbuild.config.js",
-    "watch": "node --experimental-modules esbuild.config.js --watch"
+    "watch": "node --experimental-modules esbuild.config.js --watch",
+    "check": "tsc --noEmit"
   },
   "devDependencies": {
     "@juniper-lib/esbuild": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/esbuild",
