--- a/Personal Site/package.json
+++ b/Personal Site/package.json
@@ -28,14 +28,12 @@
     "@juniper-lib/emoji": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/emoji",
     "@juniper-lib/environment": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/environment",
     "@juniper-lib/fetcher": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/fetcher",
-    "@juniper-lib/fetcher-worker": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/fetcher-worker",
     "@juniper-lib/mediatypes": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/mediatypes",
     "@juniper-lib/tests": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/tests",
     "@juniper-lib/threejs": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/threejs",
     "@juniper-lib/tslib": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/tslib",
     "@juniper-lib/webrtc": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/webrtc",
-    "@juniper-lib/worker-client": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/worker-client",
-    "@juniper-lib/worker-server": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/worker-server",
+    "@juniper-lib/workers": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/workers",
     "@juniper-types/indexdb": "file:../Juniper/src/Juniper.TypeScript/@juniper-types/indexdb",
     "@types/offscreencanvas": "2019.7.0",
     "gl-matrix": "3.4.3",
