--- a/BuildConfig/BuildConfig.csproj
+++ b/BuildConfig/BuildConfig.csproj
@@ -7,6 +7,18 @@
 		<AssemblyName>SeanMcBeth.BuildConfig</AssemblyName>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<Authors>Sean T. McBeth</Authors>
+		<Copyright>Copyright © Sean T. McBeth 2022</Copyright>
+		<GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+		<Description>General purpose server code</Description>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	  <DebugType>portable</DebugType>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	  <DebugType>none</DebugType>
 	</PropertyGroup>
 
 	<ItemGroup>
