--- a/Personal Site/appsettings.json
+++ b/Personal Site/appsettings.json
@@ -14,7 +14,8 @@
   "ContentTypes": {
     ".glb": "model/gltf-binary",
     ".gltf": "model/gltf-json",
-    ".vtt": "text/vtt"
+    ".vtt": "text/vtt",
+    ".webmanifest": "application/manifest+json"
   },
   "DefaultFiles": [
     "index.html"
