moving code around

--- a/TypeScript Code/package.json
+++ b/TypeScript Code/package.json
@@ -30,11 +30,14 @@
     "@juniper-lib/emoji": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/emoji",
     "@juniper-lib/environment": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/environment",
     "@juniper-lib/fetcher": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/fetcher",
+    "@juniper-lib/indexdb": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/indexdb",
     "@juniper-lib/mediatypes": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/mediatypes",
     "@juniper-lib/tests": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/tests",
     "@juniper-lib/threejs": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/threejs",
     "@juniper-lib/tslib": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/tslib",
+    "@juniper-lib/webgl": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/webgl",
     "@juniper-lib/webrtc": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/webrtc",
+    "@juniper-lib/widgets": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/widgets",
     "@juniper-lib/workers": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/workers",
     "gl-matrix": "3.4.3",
     "pdfjs-dist": "2.14.305",
