--- a/TypeScript Code/package.json
+++ b/TypeScript Code/package.json
@@ -15,15 +15,17 @@
     "@juniper-types/extra-types": "file:../Juniper/src/Juniper.TypeScript/@juniper-types/extra-types",
     "@juniper-types/indexdb": "file:../Juniper/src/Juniper.TypeScript/@juniper-types/indexdb",
     "@types/dom-chromium-installation-events": "101.0.0",
-    "@types/dom-mediacapture-record": "1.0.15",
+    "@types/dom-mediacapture-record": "1.0.16",
     "@types/offscreencanvas": "2019.7.0",
-    "@types/three": "0.149.0",
+    "@types/three": "0.150.1",
     "@types/web-bluetooth": "0.0.16",
     "@types/webxr": "0.5.1",
-    "esbuild": "0.17.15",
-    "esbuild-plugin-glsl": "1.1.1"
+    "esbuild": "0.17.17",
+    "esbuild-plugin-glsl": "1.2.1"
   },
   "dependencies": {
+    "@babylonjs/core": "5.57.0",
+    "@babylonjs/loaders": "5.57.0",
     "@juniper-lib/audio": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/audio",
     "@juniper-lib/dom": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/dom",
     "@juniper-lib/emoji": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/emoji",
@@ -42,7 +44,7 @@
     "gl-matrix": "3.4.3",
     "pdfjs-dist": "2.16.105",
     "primrose": "file:../Primrose/Primrose.TypeScript",
-    "three": "0.149.0",
-    "typescript": "4.9.5"
+    "three": "0.150.1",
+    "typescript": "5.0.4"
   }
 }
