--- a/TypeScript Code/package.json
+++ b/TypeScript Code/package.json
@@ -27,8 +27,10 @@
     "@babylonjs/core": "5.57.1",
     "@babylonjs/loaders": "5.57.1",
     "@juniper-lib/audio": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/audio",
+    "@juniper-lib/collections": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/collections",
     "@juniper-lib/dom": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/dom",
     "@juniper-lib/emoji": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/emoji",
+    "@juniper-lib/events": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/events",
     "@juniper-lib/fetcher": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/fetcher",
     "@juniper-lib/graphics2d": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/graphics2d",
     "@juniper-lib/indexdb": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/indexdb",
