--- a/TypeScript Code/package.json
+++ b/TypeScript Code/package.json
@@ -20,10 +20,8 @@
     "@types/three": "0.150.2",
     "@types/web-bluetooth": "0.0.17",
     "@types/webxr": "0.5.2",
-    "@typescript-eslint/eslint-plugin": "5.59.8",
-    "esbuild": "0.17.19",
-    "esbuild-plugin-glsl": "1.2.1",
-    "eslint": "8.42.0"
+    "esbuild": "0.18.17",
+    "esbuild-plugin-glsl": "1.2.1"
   },
   "dependencies": {
     "@babylonjs/core": "5.57.1",
@@ -49,6 +47,6 @@
     "pdfjs-dist": "2.16.105",
     "primrose": "file:../Primrose/Primrose.TypeScript",
     "three": "0.150.1",
-    "typescript": "5.0.4"
+    "typescript": "5.1.6"
   }
 }
