--- a/TypeScript Code/package.json
+++ b/TypeScript Code/package.json
@@ -21,7 +21,8 @@
     "@types/web-bluetooth": "0.0.17",
     "@types/webxr": "0.5.2",
     "esbuild": "0.18.17",
-    "esbuild-plugin-glsl": "1.2.1"
+    "esbuild-plugin-glsl": "1.2.1",
+    "tslib": "2.6.1"
   },
   "dependencies": {
     "@babylonjs/core": "5.57.1",
