--- a/TypeScript Code/tsconfig.json
+++ b/TypeScript Code/tsconfig.json
@@ -1,64 +1,67 @@
 {
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.glsl",
-    "src/**/*.frag",
-    "src/**/*.vert",
-    "package.json"
-  ],
+    "include": [
+        "src/**/*.ts",
+        "src/**/*.glsl",
+        "src/**/*.frag",
+        "src/**/*.vert",
+        "package.json"
+    ],
 
-  "exclude": [
-    "bin",
-    "obj"
-  ],
+    "exclude": [
+        "bin",
+        "obj",
+        "node_modules"
+    ],
 
-  "compileOnSave": true,
+    "compileOnSave": true,
 
-  "compilerOptions": {
-    "lib": [ "ES2021", "DOM", "WebWorker", "DOM.Iterable" ],
-    "target": "ES2021",
-    "module": "ES2020",
-    "moduleResolution": "node",
+    "compilerOptions": {
+        "lib": [ "ES2021", "DOM", "WebWorker", "DOM.Iterable" ],
+        "target": "ES2021",
+        "module": "ES2020",
+        "moduleResolution": "node",
 
-    "declaration": true,
-    "disableSizeLimit": true,
-    "downlevelIteration": true,
-    "importHelpers": true,
-    "incremental": true,
-    "experimentalDecorators": true,
-    "removeComments": false,
-    "resolveJsonModule": true,
-    "skipDefaultLibCheck": true,
-    "skipLibCheck": true,
-    "sourceMap": false,
+        "declaration": true,
+        "disableSizeLimit": true,
+        "downlevelIteration": true,
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "importHelpers": true,
+        "incremental": true,
+        "removeComments": false,
+        "resolveJsonModule": true,
+        "skipDefaultLibCheck": true,
+        "skipLibCheck": true,
+        "sourceMap": true,
+        "useDefineForClassFields": false,
 
-    "allowJs": false,
-    "allowSyntheticDefaultImports": true,
-    "allowUmdGlobalAccess": true,
-    "allowUnreachableCode": false,
-    "allowUnusedLabels": false,
+        "allowJs": false,
+        "allowSyntheticDefaultImports": true,
+        "allowUmdGlobalAccess": true,
+        "allowUnreachableCode": false,
+        "allowUnusedLabels": false,
 
-    "noEmit": true,
-    "noEmitHelpers": false,
-    "noEmitOnError": false,
-    "noErrorTruncation": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
-    "noImplicitOverride": true,
-    "noImplicitReturns": true,
-    "noImplicitUseStrict": false,
-    "noImplicitThis": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+        "noEmit": true,
+        "noEmitHelpers": false,
+        "noEmitOnError": false,
+        "noErrorTruncation": true,
+        "noFallthroughCasesInSwitch": true,
+        "noImplicitAny": true,
+        "noImplicitOverride": true,
+        "noImplicitReturns": true,
+        "noImplicitUseStrict": false,
+        "noImplicitThis": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
 
-    "strictBindCallApply": true,
-    "strictFunctionTypes": true,
-    "strictNullChecks": false,
-    "strictPropertyInitialization": false,
+        "strictBindCallApply": true,
+        "strictFunctionTypes": true,
+        "strictNullChecks": false,
+        "strictPropertyInitialization": false,
 
-    "typeRoots": [
-      "./node_modules/@types",
-      "./node_modules/@juniper-types"
-    ]
-  }
+        "typeRoots": [
+            "./node_modules/@types",
+            "./node_modules/@juniper-types"
+        ]
+    }
 }
