--- a/TypeScript Code/package.json
+++ b/TypeScript Code/package.json
@@ -20,6 +20,7 @@
     "@types/three": "0.150.2",
     "@types/web-bluetooth": "0.0.17",
     "@types/webxr": "0.5.2",
+    "@types/wicg-file-system-access": "2020.9.6",
     "esbuild": "0.18.17",
     "esbuild-plugin-glsl": "1.2.1",
     "tslib": "2.6.1"
