--- a/seanmcbeth.com/appsettings.Development.json
+++ b/seanmcbeth.com/appsettings.Development.json
@@ -1,9 +1,11 @@
 {
-  "DetailedErrors": true,
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "DetailedErrors": true,
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Information",
+            "Microsoft.AspNetCore": "Information",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
     }
-  }
 }
