--- a/seanmcbeth.com/Properties/launchSettings.json
+++ b/seanmcbeth.com/Properties/launchSettings.json
@@ -4,7 +4,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       },
       "applicationUrl": "https://localhost:443;http://localhost:80",
       "dotnetRunMessages": true
