--- a/seanmcbeth.com/appsettings.json
+++ b/seanmcbeth.com/appsettings.json
@@ -12,6 +12,7 @@
     }
   },
   "Ports": {
+    "Address": "*",
     "HTTP": 80,
     "HTTPS": 443
   },
@@ -25,5 +26,5 @@
     "index.html"
   ],
   "AllowedHosts": "*",
-  "Version": "2.0.2"
+  "Version": "2.0.3"
 }
