I hate it I hate it I hate it

--- a/MauiApp1/MauiApp1.csproj
+++ b/MauiApp1/MauiApp1.csproj
@@ -54,6 +54,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\Juniper\src\Juniper.Data.Sqlite\Juniper.Data.Sqlite.csproj" />
+	  <ProjectReference Include="..\Juniper\src\Juniper.Data\Juniper.Data.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <MauiXaml Update="Views\AboutPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
