--- a/seanmcbeth.com/appsettings.json
+++ b/seanmcbeth.com/appsettings.json
@@ -1,30 +1,35 @@
 {
-  "LetsEncrypt": {
-    "FullChainPath": "/home/smcbeth/bin/SeanMcBeth.Site/certs/fullchain.pem",
-    "PrivateKeyPath": "/home/smcbeth/bin/SeanMcBeth.Site/certs/privkey.pem"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning",
-      "Microsoft": "Warning",
-      "Microsoft.AspNetCore": "Warning",
-      "Microsoft.Hosting.Lifetime": "Warning"
+    "Version": "2.0.5",
+    "AllowedHosts": "*",
+    "Kestrel": {
+        "Endpoints": {
+            "HTTP": {
+                "Url": "http://*:80"
+            },
+            "HTTPS": {
+                "Url": "https://*.443"
+            }
+        }
+    },
+    "LetsEncrypt": {
+        "FullChainPath": "/home/smcbeth/bin/SeanMcBeth.Site/certs/fullchain.pem",
+        "PrivateKeyPath": "/home/smcbeth/bin/SeanMcBeth.Site/certs/privkey.pem"
+    },
+    "ContentTypes": {
+        ".glb": "model/gltf-binary",
+        ".gltf": "model/gltf-json",
+        ".vtt": "text/vtt",
+        ".webmanifest": "application/manifest+json"
+    },
+    "DefaultFiles": [
+        "index.html"
+    ],
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning",
+            "Microsoft": "Warning",
+            "Microsoft.AspNetCore": "Warning",
+            "Microsoft.Hosting.Lifetime": "Warning"
+        }
     }
-  },
-  "Ports": {
-    "Address": "*",
-    "HTTP": 80,
-    "HTTPS": 443
-  },
-  "ContentTypes": {
-    ".glb": "model/gltf-binary",
-    ".gltf": "model/gltf-json",
-    ".vtt": "text/vtt",
-    ".webmanifest": "application/manifest+json"
-  },
-  "DefaultFiles": [
-    "index.html"
-  ],
-  "AllowedHosts": "*",
-  "Version": "2.0.5"
 }
