--- a/Yarrow/Yarrow/Yarrow.csproj
+++ b/Yarrow/Yarrow/Yarrow.csproj
@@ -8,6 +8,7 @@
     <ImplicitUsings>true</ImplicitUsings>
     <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
     <Nullable>enable</Nullable>
+      <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
