--- a/seanmcbeth.com/seanmcbeth.com.csproj
+++ b/seanmcbeth.com/seanmcbeth.com.csproj
@@ -9,6 +9,7 @@
 		<TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
 		<Nullable>enable</Nullable>
 		<UserSecretsId>a3da341e-81da-4b01-b99e-ac92445d82fd</UserSecretsId>
+        <Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)'=='Debug'">
