cleanup of yabs on aisle 3

--- a/seanmcbeth.com/appsettings.Development.json
+++ b/seanmcbeth.com/appsettings.Development.json
@@ -1,5 +1,15 @@
 {
     "DetailedErrors": true,
+    "Kestrel": {
+      "Endpoints": {
+        "HTTP": {
+          "Url": "http://127.0.0.1:0"
+        },
+        "HTTPS": {
+          "Url": "https://127.0.0.1:0"
+        }
+      }
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
