--- a/seanmcbeth.com/appsettings.Development.json
+++ b/seanmcbeth.com/appsettings.Development.json
@@ -3,10 +3,10 @@
     "Kestrel": {
       "Endpoints": {
         "HTTP": {
-          "Url": "http://127.0.0.1:0"
+          "Url": "http://localhost:5000"
         },
         "HTTPS": {
-          "Url": "https://127.0.0.1:0"
+          "Url": "https://localhost:5001"
         }
       }
     },
