more appshell work

--- a/ImageViewer/appsettings.json
+++ b/ImageViewer/appsettings.json
@@ -16,6 +16,16 @@
     "DefaultFiles": [
         "index.html"
     ],
+    "AppShell": {
+        "SplashScreenPath": "splash.html",
+        "Window": {
+            "Title": "Image Viewer",
+            "Size": {
+                "Width": 1920,
+                "Height": 1080
+            }
+        }
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Warning",
