--- a/ImageViewer/ImageViewer.csproj
+++ b/ImageViewer/ImageViewer.csproj
@@ -1,10 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net7.0-windows</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <UseWPF>true</UseWPF>
         <OutputType>Exe</OutputType>
         <DebugType>portable</DebugType>
         <ApplicationIcon>foxglove.ico</ApplicationIcon>
@@ -21,7 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Juniper\src\Juniper.AppShell.WPF\Juniper.AppShell.WPF.csproj" />
+        <ProjectReference Include="..\Juniper\src\Juniper.AppShell.GTK\Juniper.AppShell.GTK.csproj" />
         <ProjectReference Include="..\Juniper\src\Juniper.AppShell\Juniper.AppShell.csproj" />
         <ProjectReference Include="..\Juniper\src\Juniper.Root\Juniper.Root.csproj" />
         <ProjectReference Include="..\Juniper\src\Juniper.Server\Juniper.Server.csproj" />
