--- a/ImageViewer/appsettings.json
+++ b/ImageViewer/appsettings.json
@@ -20,10 +20,7 @@
         "SplashScreenPath": "splash.html",
         "Window": {
             "Title": "Image Viewer",
-            "Size": {
-                "Width": 1920,
-                "Height": 1080
-            }
+            "Maximized": true
         }
     },
     "Logging": {
