--- a/seanmcbeth.com/tsconfig.json
+++ b/seanmcbeth.com/tsconfig.json
@@ -15,7 +15,12 @@
 
     "compileOnSave": true,
 
+    "references": [
+        
+    ],
+
     "compilerOptions": {
+        "composite": true,
         "lib": [ "ES2021", "DOM", "WebWorker", "DOM.Iterable" ],
         "target": "ES2021",
         "module": "ES2020",
